--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,9 +1,9 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
-- name: University of California San Francisco, Neuroscape
-  link: https://neuroscape.ucsf.edu
-  date: June 2018 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
-  job: Software Engineer Intern
+#- name: University of California San Francisco, Neuroscape
+#  link: https://neuroscape.ucsf.edu
+#  date: June 2018 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+#  job: Software Engineer Intern
 
 #- name: Facebook
 #  link: http://www.facebook.com/
